<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wrds</string>
    <string name="welcome">Welcome to Wrds for Android™!</string>
    <string name="firstlogin">Using this app you can practice your Wrds vocabulary lists offline. To start you first need to log in with your Wrds login-details.</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">No account?</string>
    <string name="registerurl">http://beta.wrds.eu/register</string>
    <string name="loggedindownloadlists">Now you are logged in, you first have to download your vocabulary lists. To do this click the button below. First make sure you are connected to the internet.</string>
	<string name="downloadlists">Download lists</string>
	<string name="downloadinglists">Downloading lists…</string>
	<string name="done">Done!</string>
	<string name="textsize">Text size</string>
	<string name="secondsamount">Time in seconds</string>
	<string name="internetrequired">There is an Internet connection is required!</string>
	<string name="incorrectlogin">Your details are not correct!</string>
	<string name="emptylogin">Your details are not correct!</string>
	<string name="serverfail">Can\'t connect to the server!</string>
	<string name="error">An error occured!\n</string>
	<string name="questionlanguage">LANGUAGE</string>
	<string name="teststyle">TEST STYLE</string>
	<string name="retype">Retype</string>
	<string name="multiplechoice">Multiple choice</string>
	<string name="inyourmind">In your mind</string>
	<string name="translate">Translate</string>
	<string name="setanswerlanguage">Choose the language you want to learn.</string>
	<string name="settings">SETTINGS</string>
	<string name="sync">Synchronize</string>
	<string name="loginsettings">Login data</string>
	<string name="testsettings">Practice options</string>
	<string name="about">ABOUT</string>
	<string name="abouttext">Thanks for downloading!</string>
	<string name="otherlangs">OTHER LANGUAGES</string>
	<string name="showanswer">Show answer</string>
	<string name="checkanswer">Check</string>
	<string name="correct">Correct</string>
	<string name="incorrect">Incorrect</string>
	<string name="result">RESULT</string>
	<string name="nog"></string>
	<string name="wordsafter">more words after this</string>
	<string name="method">Method</string>
	<string name="order">Order</string>
	<string name="time">Time</string>
	<string name="change">Change</string>
	<string name="changelogindata">Change login data</string>
	<string name="practice">Practice</string>
	<string name="practicegood">Extensive: repeat until correct</string>
	<string name="practicefast">Quick: ask only once</string>
	<string name="hour">hour</string>
	<string name="hours">hours</string>
	<string name="minute">minute</string>
	<string name="minutes">minutes</string>
	<string name="seconds">seconds</string>
	<string name="and">and</string>
	<string name="rules">Precision</string>
	<string name="uppercase">Capitalization</string>
	<string name="accents">Diacritical marks</string>
	<string name="punctuation">Punctuation</string>
	<string name="score">Score style</string>
	<string name="scoreNL">Dutch (0–10)</string>
	<string name="scoreproc">Percents (0–100)</string>
	<string name="datachanged">The data has been updated!</string>
	<string name="syncing">Syncing lists</string>
	<string name="legal">Legal</string>
	<string name="information">All logo\'s and names in this application are trademarks of their respective owners.<br />We collect some information from time to time while u use this application to learn how people use Wrts. We don\'t collect information that can identify you.</string>
	<string name="deletesure">Are you sure you want to delete this word?</string>
	<string name="deletelistsure">Are you sure you want to delete this list?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="deleteword">Delete word</string>
	<string name="deletelist">Delete list</string>
	<string name="editlisthelp">Click the title to edit the title and languages, short click a word to edit the word and long click a word to delete the word. To add a new word, click the plus button.</string>
	<string name="title">Title</string>
	<string name="langa">Language 1</string>
	<string name="langb">Language 2</string>
	<string name="langc">Language 3</string>
	<string name="langd">Language 4</string>
	<string name="lange">Language 5</string>
	<string name="langf">Language 6</string>
	<string name="langg">Language 7</string>
	<string name="langh">Language 8</string>
	<string name="langi">Language 9</string>
	<string name="langj">Language 10</string>
	<string name="goback">Save to return to the previous screen</string>
	<string name="madelists">lists created</string>
	<string name="editedlists">lists edited</string>
	<string name="deletedlists">lists deleted</string>
	<string name="downloadedlists">lists downloaded</string>
	<string name="fullsync">Sync all lists</string>
	<string name="welcomereplacement">Sébastiaanmaakt is going to work with Digischool. From now on, the app will be available through their account. Use the button to delete this app and download the new one!</string>
    <string name="downloadreplacement">Download the new app</string>	
</resources>