<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/topbarlayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/topbar"
            android:orientation="vertical" >
			<ImageView
                android:id="@+id/LogoView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:src="@drawable/ic_menu_logo"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/textLogo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/LogoView"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="19dp"
                android:textColor="#ffffff" />
            <RelativeLayout
            	android:id="@+id/topbarborder"
            	android:layout_width="fill_parent"
            	android:layout_height="1dp"
            	android:background="@color/topbarborder"
            	android:layout_alignParentBottom="true"
            	android:orientation="vertical" />
        </RelativeLayout>
        
        <ScrollView
	        	android:layout_width="fill_parent"
	        	android:layout_height="fill_parent"
	       	 	android:id="@+id/Settings"
				android:orientation="vertical"
				android:background="@color/backcolor"
				android:paddingTop="10dp">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        	<TextView
					    android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
						android:text="@string/settings"
						android:textStyle="bold"
						android:color="@color/grey2"
						android:paddingBottom="1dp"
						android:layout_marginLeft="20dp"
						android:layout_marginRight="15dp"/>
					<ImageView
					    android:contentDescription="@string/app_name"
					    android:layout_width="fill_parent"
	        			android:layout_height="2dp"
	        			android:layout_marginLeft="15dp"
						android:layout_marginRight="15dp"
						android:layout_marginTop="1dp"
	        			android:background="@color/grey2" />
					<Button 
					    android:id="@+id/loginsettings"
					    android:layout_marginLeft="15dp"
					    android:layout_marginRight="15dp"
					    android:layout_marginTop="15dp"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/loginsettings"
					    android:textSize="14dp"
					/>
					<Button 
					    android:id="@+id/testsettings"
					    android:layout_marginLeft="15dp"
					    android:layout_marginRight="15dp"
					    android:layout_marginTop="15dp"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/testsettings"
					    android:textSize="14dp"
					/>
					<Button 
					    android:id="@+id/fullsync"
					    android:layout_marginLeft="15dp"
					    android:layout_marginRight="15dp"
					    android:layout_marginTop="15dp"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/fullsync"
					    android:textSize="14dp"
					/>
					<TextView
					    android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
						android:text="@string/about"
						android:textStyle="bold"
						android:color="@color/grey2"
						android:paddingBottom="1dp"
						android:layout_marginLeft="20dp"
						android:layout_marginRight="15dp"
						android:layout_marginTop="15dp" />
					<ImageView
					    android:contentDescription="@string/app_name"
					    android:layout_width="fill_parent"
	        			android:layout_height="2dp"
	        			android:layout_marginLeft="15dp"
						android:layout_marginRight="15dp"
						android:layout_marginTop="1dp"
	        			android:background="@color/grey2" />
					<ImageView 
				    	android:layout_width="fill_parent"
				    	android:layout_height="wrap_content"
				    	android:gravity="center"
				    	android:src="@drawable/logo"
				    	android:scaleWidth="150dp"
				    	android:maxWidth="150dp"
				    	android:scaleType="centerCrop"
				   		android:scaleGravity="center"
				    	android:layout_margin="20dp"				    
				    	android:adjustViewBounds="true"
				    	android:contentDescription="@string/app_name"/>
					
					<TextView
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:layout_margin="15dp"
					    android:text="@string/abouttext"
					    android:textColor="@color/grey"
					    android:textSize="13dp" />

					<Button
					    android:id="@+id/legalinfo"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_gravity="center"
					    android:text="@string/legal" />

			</LinearLayout>
        </ScrollView>        
</LinearLayout>