<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/topbarlayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/topbar"
            android:orientation="vertical" >
			<ImageView
                android:id="@+id/LogoView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:src="@drawable/ic_menu_logo"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/textLogo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/LogoView"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="19dp"
                android:textColor="#ffffff" />
            <RelativeLayout
            	android:id="@+id/topbarborder"
            	android:layout_width="fill_parent"
            	android:layout_height="1dp"
            	android:background="@color/topbarborder"
            	android:layout_alignParentBottom="true"
            	android:orientation="vertical" />
        </RelativeLayout>
        
        <ScrollView
	        	android:layout_width="fill_parent"
	        	android:layout_height="fill_parent"
	       	 	android:id="@+id/Logindata"
				android:orientation="vertical"
				android:background="@color/backcolor"
				android:paddingTop="10dp">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
					<TextView
					    android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
						android:text="@string/changelogindata"
						android:textStyle="bold"
						android:color="@color/grey2"
						android:paddingBottom="1dp"
						android:layout_marginLeft="20dp"
						android:layout_marginRight="15dp"
						android:layout_marginTop="15dp" />
					<ImageView
					    android:contentDescription="@string/app_name"
					    android:layout_width="fill_parent"
	        			android:layout_height="2dp"
	        			android:layout_marginLeft="15dp"
						android:layout_marginRight="15dp"
						android:layout_marginTop="1dp"
	        			android:background="@color/grey2" />
		        	<EditText
			                android:layout_width="fill_parent"
			                android:layout_height="40dp"
			                android:layout_gravity="center"
			                android:id="@+id/username"
			                android:layout_marginLeft="20dp"
			                android:layout_marginRight="20dp"
			                android:layout_marginTop="20dp"
			                android:gravity="center"
			                android:hint="@string/mail"
			                android:editable="true"
			                android:autoText="false"
			                android:singleLine="true"
			                android:inputType="textEmailAddress" />
			            <EditText
			                android:layout_width="fill_parent"
			                android:layout_height="40dp"
			                android:layout_gravity="center"
			                android:id="@+id/password"
			                android:layout_marginLeft="20dp"
			                android:layout_marginRight="20dp"
			                android:layout_marginTop="10dp"
			                android:gravity="center"
			                android:hint="@string/password"
			                android:editable="true"
			                android:ellipsize="end"
			                android:password="true"
			                android:autoText="false"
			                android:singleLine="true"
							android:inputType="textPassword" />
				        <Button 
				            android:id="@+id/login"
				            android:layout_width="140dp"
				            android:layout_height="wrap_content"	
				            android:layout_marginTop="10dp"
				            android:layout_gravity="center"
					    	android:gravity="center"		                
				            android:layout_marginRight="8dp"
				            android:text="@string/change"
				        />
			            <RelativeLayout 
			                android:layout_width="fill_parent"
					    	android:layout_height="wrap_content"
					    	android:gravity="center" >
			                <ProgressBar
					    		android:id="@+id/loading"
					    		style="?android:attr/progressBarStyleLarge"
					    		android:layout_width="wrap_content"
					    		android:layout_height="wrap_content"
					    		android:layout_marginTop="20dp"
					   		 	android:layout_marginBottom="20dp"
					    		android:gravity="center"
					    		android:visibility="gone" />
			            </RelativeLayout>
			</LinearLayout>
        </ScrollView>    
</LinearLayout>