<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backcolor" >
    
    <RelativeLayout
            android:id="@+id/topbarlayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/topbar"
            android:orientation="vertical" >
			<ImageView
                android:id="@+id/LogoView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:src="@drawable/ic_menu_logo"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/textLogo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/LogoView"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="19dp"
                android:textColor="#ffffff" />
            <RelativeLayout
            	android:id="@+id/topbarborder"
            	android:layout_width="fill_parent"
            	android:layout_height="1dp"
            	android:background="@color/topbarborder"
            	android:layout_alignParentBottom="true"
            	android:orientation="vertical" />
        </RelativeLayout>
        
        <ScrollView
	        	android:layout_width="fill_parent"
	        	android:layout_height="fill_parent"
	       	 	android:id="@+id/ResultsScroll"
				android:orientation="vertical"
				android:background="@color/backcolor"
				android:paddingTop="10dp">
            <LinearLayout
                android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="vertical" >
	            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			        android:layout_width="fill_parent"
			        android:layout_height="0dp"
			        android:layout_weight="10"
			        android:background="@color/backcolor"
			        android:orientation="vertical">
			        	<TextView
						    android:layout_width="fill_parent"
		        			android:layout_height="wrap_content"
							android:id="@+id/result"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:paddingBottom="1dp"
							android:layout_marginLeft="20dp"
							android:layout_marginRight="15dp"
							android:text="@string/result"/>		        	
						<ImageView
						    android:contentDescription="@string/app_name"
						    android:layout_width="fill_parent"
		        			android:layout_height="2dp"
		        			android:layout_marginLeft="15dp"
							android:layout_marginRight="15dp"
							android:layout_marginTop="1dp"
		        			android:background="@color/grey2" />
						<RelativeLayout 
						    android:layout_width="fill_parent"
		        			android:layout_height="wrap_content"
		        			android:layout_marginTop="15dp"
							android:layout_marginLeft="30dp"
							android:layout_marginRight="30dp">
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
							android:id="@+id/method"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:layout_gravity="left"
							android:text="@string/method"
							android:layout_alignParentLeft="true" />
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:layout_alignParentRight="true"
		        			android:layout_marginLeft="3dp"
							android:id="@+id/methodtext"
							android:color="@color/grey2" />				    
						</RelativeLayout>
						<RelativeLayout 
						    android:layout_width="fill_parent"
		        			android:layout_height="wrap_content"
		        			android:layout_marginTop="5dp"
							android:layout_marginLeft="30dp"
							android:layout_marginRight="30dp">
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
							android:id="@+id/order"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:layout_gravity="left"
							android:text="@string/order"
							android:layout_alignParentLeft="true" />
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:layout_alignParentRight="true"
		        			android:layout_marginLeft="3dp"
							android:id="@+id/ordertext"
							android:color="@color/grey2" />		    
						</RelativeLayout>
						<RelativeLayout 
						    android:layout_width="fill_parent"
		        			android:layout_height="wrap_content"
		        			android:layout_marginTop="5dp"
							android:layout_marginLeft="30dp"
							android:layout_marginRight="30dp">
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
							android:id="@+id/time"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:layout_gravity="left"
							android:text="@string/time"
							android:layout_alignParentLeft="true" />
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:layout_alignParentRight="true"
		        			android:layout_marginLeft="3dp"
							android:id="@+id/timetext"
							android:color="@color/grey2" />		    
						</RelativeLayout>
						<TextView
						    android:layout_width="fill_parent"
		        			android:layout_height="wrap_content"
							android:id="@+id/note"
							android:textStyle="bold"
							android:layout_marginTop="15dp"
							android:gravity="center"
							android:textSize="50dp" />
						
						<RelativeLayout 
						    android:layout_width="fill_parent"
		        			android:layout_height="wrap_content"
		        			android:layout_marginTop="30dp"
							android:layout_marginLeft="60dp"
							android:layout_marginRight="60dp">
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
							android:id="@+id/countcorrect"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:layout_gravity="left"
							android:text=""
							android:layout_alignParentLeft="true"
							android:textColor="#008800" />
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:layout_toRightOf="@id/countcorrect"
		        			android:layout_marginLeft="3dp"
							android:id="@+id/correcttext"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:text="@string/correct"
							android:textColor="#008800" />
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:layout_alignParentRight="true"
		        			android:layout_marginLeft="3dp"
							android:id="@+id/incorrecttext"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:text="@string/incorrect"
							android:textColor="#880000" />
						    <TextView
						    android:layout_width="wrap_content"
		        			android:layout_height="wrap_content"
		        			android:layout_toLeftOf="@id/incorrecttext"
							android:id="@+id/countincorrect"
							android:textStyle="bold"
							android:color="@color/grey2"
							android:textColor="#880000" />					    
						</RelativeLayout>
				</LinearLayout>
				<com.google.ads.AdView
				    	 android:id="@+id/adView"
				    	 android:layout_width="wrap_content"
				    	 android:layout_height="wrap_content"
				    	 android:layout_gravity="bottom"
				    	 android:layout_weight="0"
				    	 android:layout_marginTop="20dp"
				    	 android:gravity="bottom"
				    	 ads:adSize="BANNER"
				    	 ads:adUnitId="a14e8c518781661"
				    	 ads:loadAdOnCreate="true"	    
				/>
			</LinearLayout>
		</ScrollView>
</LinearLayout>